--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/test-design-app/assets/index.bc7b4cc3.js"></script>
-    <link rel="stylesheet" href="/test-design-app/assets/index.b47569b6.css">
-  </head>
-  <body style="margin: 0; font-family: 'Uber Move Text';">
-    <div id="root"></div>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+  <script type="module" crossorigin src="/test-design-app/assets/index.6abe96da.js"></script>
+  <link rel="stylesheet" href="/test-design-app/assets/index.b47569b6.css">
+</head>
+
+<body style="margin: 0; font-family: 'Uber Move Text';">
+  <div id="root"></div>
+  
+</body>
+
 </html>
